fix: mic-disabled btn, mic skeleton for loading state, placeholder, avatar name truncate

--- a/src/dotnet/UI.Blazor.App/Components/MarkupEditor/markup-editor.css
+++ b/src/dotnet/UI.Blazor.App/Components/MarkupEditor/markup-editor.css
@@ -35,7 +35,7 @@
 .markup-editor .editor-content:empty:before {
     content: attr(data-placeholder);
     @apply truncate;
-    @apply text-post-panel-text;
+    @apply text-03;
 }
 body.narrow .markup-editor .editor-content:empty:before {
     @apply text-text-1;
